to fix the stuff on mobile and stuff

--- a/CSS/Main.scss
+++ b/CSS/Main.scss
@@ -1186,11 +1186,11 @@ iframe {
 
 #imgBarContainer {
     padding: 20px;
-    height: 290px;
+    height: 490px;
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    justify-content: space-evenly;
+    
 
    &::-webkit-scrollbar {
        width: 0px;
@@ -1204,9 +1204,10 @@ iframe {
     background-repeat: no-repeat;
     background-position: center;
     width: 70px;
-    height: 250px;
+    height: 450px;
     margin: 0 10px;
     display: inline-block;
+    margin: 0px auto 0px 20px;
     flex-shrink: 0;
     cursor: pointer;
     text-align: center !important;
@@ -1233,6 +1234,7 @@ iframe {
 
 #barText {
     width: 100%;
+    min-height: 120px;
     text-align: center;
     > div {
         display: none;
